<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Appli_Fredi</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="Nom">Nom : </string>
    <string name="Prenom">Prénom : </string>
    <string name="Adresse">Adresse : </string>
    <string name="Valider">Valider</string>
    <string name="title_activity_my_sqlite_helper">MySQLiteHelper</string>
    <string name="title_activity_login">Login</string>
    <string name="mot_de_passe">"Mot de passe : "</string>
    <string name="title_activity_simuler_montant">Simuler_montant</string>
    <string name="tarif_kilometrique">&quot;Nombre kilométrique : &quot;</string>
    <string name="montant">"Montant : "</string>
    <string name="title_activity_fonctionnalites">Fonctionnalites</string>
    <string name="ajouter_deplacement">Ajouter un déplacement</string>
    <string name="consulter_deplacements">Consulter les déplacements</string>
    <string name="simuler_montant_remboursements">Simuler le montant des remboursements</string>
    <string name="title_activity_consulter">Consulter</string>
    <string name="modifier">Modifier</string>
    <string name="supprimer">Supprimer</string>
    <string name="title_activity_enregistrement_deplacement">EnregistrementDeplacement</string>

</resources>
