<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/txtNom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Nom" />

    <EditText
        android:id="@+id/editText1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/txtPrenom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Prenom" />

    <EditText
        android:id="@+id/edtPrenom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10" />

    <TextView
        android:id="@+id/txtAdresse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Adresse" />

    <EditText
        android:id="@+id/edtAdresse"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10" />

</LinearLayout>
